src/objects/Affiliation__c.object
<CustomObject>
    <description>This is a junction object to maintain Account-Contact M:M relationships.</description>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Accounts</description>
        <inlineHelpText>Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Contacts</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Available_for_Procedure__c</fullName>
        <label>Available for Procedure?</label>
        <picklist>
            <picklistValues>
                <fullName>Monday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday PM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Available_in_Clinic__c</fullName>
        <description>Which day the Physician is available?</description>
        <inlineHelpText>Which day the Physician is available?</inlineHelpText>
        <label>Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Monday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday PM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Clinical_Trials_Shared_Interests__c</fullName>
        <label>Clinical Trials Shared Interests</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.LastName &amp; &apos;,&apos; &amp; Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contacts</description>
        <inlineHelpText>Contacts</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliated Accounts</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Trainee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Head of Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visiting Medical Officer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Primary Relationship</inlineHelpText>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role the Contact is playing at an Account/Organization</description>
        <inlineHelpText>Role the Contact is playing at an Account/Organization</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Society__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Society</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Professional Society</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations (Society)</relationshipLabel>
        <relationshipName>Affiliations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Affiliation</description>
        <inlineHelpText>Status of the Affiliation</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>level_of_influence__c</fullName>
        <description>This describes the level of influence of this Practitioner at THIS  Facility</description>
        <inlineHelpText>Use this field to describe the level of influence of this Practitioner at THIS  Facility</inlineHelpText>
        <label>Level of Influence?</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>who_do_they_respect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field describes who may exert influence over this person at this facility</description>
        <inlineHelpText>Use this field to describe who may exert influence over this person at this facility</inlineHelpText>
        <label>Who do they Respect</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>R360 Doctor to Doctor</relationshipLabel>
        <relationshipName>Facilities_Practitioner_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Affiliation</label>
    <listViews>
        <fullName>ANZ_Affiliations</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/30/2016 12:00 AM</value>
        </filters>
        <label>ANZ Affiliations</label>
        <sharedTo>
            <roleAndSubordinates>ANZ_SJM_Administrator</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Account_Record_Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Status__c</columns>
        <columns>Available_in_Clinic__c</columns>
        <columns>Available_for_Procedure__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AFF-{000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <recordTypes>
        <fullName>Account_Contact</fullName>
        <active>true</active>
        <label>Account-Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professional_Society</fullName>
        <active>true</active>
        <label>Professional Society</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>